--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,5 +1,6 @@
-. {
+body {
   background-color: black;
+  text-align: center;
 }
 
 h1 {
@@ -7,5 +8,27 @@ h1 {
   font-weight: normal;
   font-size: 50px;
   color: white;
-  text-align: center;
+}
+
+h2 {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: 300;
+  font-size: 42;
+  color: white;
+}
+
+.downloadLink {
+  color: aquamarine;
+  font-size: 16px;
+}
+
+.slogan {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 21px;
+  color: gray;
+}
+
+.copyright {
+  color: gray;
+  text-align: right;
 }
